Bug #75: Updated overflow property for GridCellText fields in ViewData

--- a/web/css/desinventar.css
+++ b/web/css/desinventar.css
@@ -296,9 +296,12 @@ table.col {
 }
 
 .GridCellText {
-	border-right: thin solid #ccc; text-align: left;
+	border-right: thin solid #ccc;
+	text-align: left;
 	font-size:11px;
 	max-width:200px;
+	overflow-x:hidden;
+	overflow-y:auto;
 }
 
 .RegionInfoTitle {
